--- a/Resources/translations/messages.nl.yml
+++ b/Resources/translations/messages.nl.yml
@@ -327,3 +327,11 @@ translation.import_partly_failed: De import is gedeeltelijk gefaald, controleer 
 
 app_versions: app versies
 app_version: app versie
+app_version.version: Versie
+app_version.platform: Platform
+app_version.release_date: Release datum
+app_version.description: Omschrijving
+app_version.description_label: "Omschrijving (%lang%)"
+app_version.required: Versie is verplicht
+app_version.file: Bestand
+app_version.url: Url
